feat: Convert Settings management sections to modals
- Replace inline department/leave/holiday sections with modal popups
- Add three management buttons in System Settings tab
- Create DepartmentsModal, LeavePoliciesModal, and HolidaysModal components
- Implement large modals (80-90% width) with backdrop and close handlers
- Ensure only one modal open at a time
- Add Escape key and backdrop click to close modals
- Load data when modals open instead of on page load
- Reset editing state when modals close
- Add translation keys for new UI elements

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -643,6 +643,8 @@
     "title": "Settings",
     "description": "Manage system configuration and user preferences",
     "system": "System Settings",
+    "systemDescription": "Manage departments, leave policies, and company holidays",
+    "noSystemSettings": "You don't have permission to manage system settings",
     "preferences": "User Preferences",
     "notifications": "Notifications",
     "security": "Security",
