feat: Complete frontend implementation for 6 new settings features
- Add state management for all 6 features (job titles, benefits packages, work schedules, overtime policies, attendance policies, remote work policies)
- Add load and CRUD handler functions for all features
- Add 6 new modal components with full forms
- Add 6 new buttons in System Settings tab
- Add translation keys for all features in en/es/fr
- All features require manager/admin role (backend + frontend)
- Add applies_to_id dropdowns for policy modals
- Load dependencies (departments, job titles) when modals open

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -815,6 +815,196 @@
       "noHolidays": "No holidays found",
       "upcoming": "Upcoming"
     },
+    "jobTitles": {
+      "title": "Job Titles & Positions",
+      "description": "Manage job titles, positions, and organizational hierarchy",
+      "addNew": "Add New Job Title",
+      "add": "Add",
+      "saving": "Saving...",
+      "update": "Update",
+      "edit": "Edit",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Job Titles",
+      "name": "Job Title Name",
+      "nameRequired": "Job title name is required",
+      "description": "Description",
+      "department": "Department",
+      "selectDepartment": "Select Department",
+      "levelGrade": "Level/Grade",
+      "reportsTo": "Reports To",
+      "selectJobTitle": "Select Job Title",
+      "minSalary": "Min Salary",
+      "maxSalary": "Max Salary",
+      "noJobTitles": "No job titles found",
+      "inUse": "In use by {{count}} employee(s)",
+      "cannotDelete": "Cannot delete job title with assigned employees",
+      "addError": "Failed to add job title",
+      "updateError": "Failed to update job title",
+      "deleteError": "Failed to delete job title",
+      "confirmDelete": "Are you sure you want to delete this job title?"
+    },
+    "benefitsPackages": {
+      "title": "Benefits Packages",
+      "description": "Configure employee benefits packages including health, dental, retirement, and more",
+      "addNew": "Add New Benefits Package",
+      "add": "Add",
+      "saving": "Saving...",
+      "update": "Update",
+      "edit": "Edit",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Benefits Packages",
+      "name": "Package Name",
+      "nameRequired": "Package name is required",
+      "description": "Description",
+      "benefitTypes": "Benefit Types",
+      "coverageLevel": "Coverage Level",
+      "basic": "Basic",
+      "standard": "Standard",
+      "premium": "Premium",
+      "employeeCost": "Employee Cost ($)",
+      "employerCost": "Employer Cost ($)",
+      "noPackages": "No benefits packages found",
+      "inUse": "Assigned to {{count}} employee(s)",
+      "cannotDelete": "Cannot delete package assigned to employees",
+      "addError": "Failed to add benefits package",
+      "updateError": "Failed to update benefits package",
+      "deleteError": "Failed to delete benefits package",
+      "confirmDelete": "Are you sure you want to delete this benefits package?"
+    },
+    "workSchedules": {
+      "title": "Work Schedules & Shifts",
+      "description": "Define work schedules, shift patterns, and flexible hours",
+      "addNew": "Add New Work Schedule",
+      "add": "Add",
+      "saving": "Saving...",
+      "update": "Update",
+      "edit": "Edit",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Work Schedules",
+      "name": "Schedule Name",
+      "nameRequired": "Schedule name is required",
+      "description": "Description",
+      "startTime": "Start Time",
+      "endTime": "End Time",
+      "daysOfWeek": "Days of Week",
+      "breakDuration": "Break Duration (minutes)",
+      "flexibleHours": "Flexible Hours",
+      "flexible": "Flexible",
+      "fixed": "Fixed",
+      "maxHoursPerWeek": "Max Hours Per Week",
+      "noSchedules": "No work schedules found",
+      "inUse": "Assigned to {{count}} employee(s)",
+      "cannotDelete": "Cannot delete schedule assigned to employees",
+      "addError": "Failed to add work schedule",
+      "updateError": "Failed to update work schedule",
+      "deleteError": "Failed to delete work schedule",
+      "confirmDelete": "Are you sure you want to delete this work schedule?"
+    },
+    "overtimePolicies": {
+      "title": "Overtime Policies",
+      "description": "Configure overtime calculation rules, thresholds, and multipliers",
+      "addNew": "Add New Overtime Policy",
+      "add": "Add",
+      "saving": "Saving...",
+      "update": "Update",
+      "edit": "Edit",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Overtime Policies",
+      "name": "Policy Name",
+      "nameRequired": "Policy name is required",
+      "description": "Description",
+      "weeklyThreshold": "Weekly Threshold (hours)",
+      "dailyThreshold": "Daily Threshold (hours)",
+      "multiplier": "Overtime Multiplier",
+      "requiresApproval": "Requires Approval",
+      "appliesTo": "Applies To",
+      "all": "All Employees",
+      "department": "Department",
+      "jobTitle": "Job Title",
+      "select": "Select",
+      "selectDepartment": "Select Department",
+      "selectJobTitle": "Select Job Title",
+      "noPolicies": "No overtime policies found",
+      "addError": "Failed to add overtime policy",
+      "updateError": "Failed to update overtime policy",
+      "deleteError": "Failed to delete overtime policy",
+      "confirmDelete": "Are you sure you want to delete this overtime policy?"
+    },
+    "attendancePolicies": {
+      "title": "Attendance Policies",
+      "description": "Set attendance rules, grace periods, and point systems",
+      "addNew": "Add New Attendance Policy",
+      "add": "Add",
+      "saving": "Saving...",
+      "update": "Update",
+      "edit": "Edit",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Attendance Policies",
+      "name": "Policy Name",
+      "nameRequired": "Policy name is required",
+      "description": "Description",
+      "lateGracePeriod": "Late Arrival Grace Period (minutes)",
+      "absenceLimitPerMonth": "Absence Limit Per Month",
+      "tardinessPenalty": "Tardiness Penalty (points)",
+      "absencePenalty": "Absence Penalty (points)",
+      "pointThresholdTermination": "Point Threshold for Termination",
+      "appliesTo": "Applies To",
+      "all": "All Employees",
+      "department": "Department",
+      "jobTitle": "Job Title",
+      "select": "Select",
+      "selectDepartment": "Select Department",
+      "selectJobTitle": "Select Job Title",
+      "noPolicies": "No attendance policies found",
+      "addError": "Failed to add attendance policy",
+      "updateError": "Failed to update attendance policy",
+      "deleteError": "Failed to delete attendance policy",
+      "confirmDelete": "Are you sure you want to delete this attendance policy?"
+    },
+    "remoteWorkPolicies": {
+      "title": "Remote Work Policies",
+      "description": "Configure remote work eligibility, days allowed, and equipment policies",
+      "addNew": "Add New Remote Work Policy",
+      "add": "Add",
+      "saving": "Saving...",
+      "update": "Update",
+      "edit": "Edit",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "deleting": "Deleting...",
+      "list": "Remote Work Policies",
+      "name": "Policy Name",
+      "nameRequired": "Policy name is required",
+      "description": "Description",
+      "eligibilityCriteria": "Eligibility Criteria",
+      "all": "All Employees",
+      "department": "Department",
+      "jobTitle": "Job Title",
+      "select": "Select",
+      "selectDepartment": "Select Department",
+      "selectJobTitle": "Select Job Title",
+      "daysPerWeekAllowed": "Days Per Week Allowed",
+      "requiresApproval": "Requires Approval",
+      "approvalRequired": "Approval Required",
+      "noApproval": "No Approval Required",
+      "equipmentProvided": "Equipment Provided",
+      "equipmentPolicy": "Equipment Policy",
+      "noPolicies": "No remote work policies found",
+      "addError": "Failed to add remote work policy",
+      "updateError": "Failed to update remote work policy",
+      "deleteError": "Failed to delete remote work policy",
+      "confirmDelete": "Are you sure you want to delete this remote work policy?"
+    },
     "failedToRevokeDevice": "Failed to revoke device",
     "failedToRevokeDevices": "Failed to revoke devices",
     "deviceRevokedSuccess": "✅ Device revoked successfully",
