--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -739,6 +739,187 @@
       "noHolidays": "No se encontraron días festivos",
       "upcoming": "Próximo"
     },
+    "jobTitles": {
+      "title": "Títulos de Trabajo y Posiciones",
+      "description": "Gestionar títulos de trabajo, posiciones y jerarquía organizacional",
+      "addNew": "Agregar Nuevo Título de Trabajo",
+      "add": "Agregar",
+      "saving": "Guardando...",
+      "update": "Actualizar",
+      "edit": "Editar",
+      "cancel": "Cancelar",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Títulos de Trabajo",
+      "name": "Nombre del Título de Trabajo",
+      "nameRequired": "El nombre del título de trabajo es requerido",
+      "description": "Descripción",
+      "department": "Departamento",
+      "selectDepartment": "Seleccionar Departamento",
+      "levelGrade": "Nivel/Grado",
+      "reportsTo": "Reporta A",
+      "selectJobTitle": "Seleccionar Título de Trabajo",
+      "minSalary": "Salario Mínimo",
+      "maxSalary": "Salario Máximo",
+      "noJobTitles": "No se encontraron títulos de trabajo",
+      "inUse": "En uso por {{count}} empleado(s)",
+      "cannotDelete": "No se puede eliminar título de trabajo con empleados asignados",
+      "addError": "Error al agregar título de trabajo",
+      "updateError": "Error al actualizar título de trabajo",
+      "deleteError": "Error al eliminar título de trabajo",
+      "confirmDelete": "¿Está seguro de que desea eliminar este título de trabajo?"
+    },
+    "benefitsPackages": {
+      "title": "Paquetes de Beneficios",
+      "description": "Configurar paquetes de beneficios para empleados incluyendo salud, dental, jubilación y más",
+      "addNew": "Agregar Nuevo Paquete de Beneficios",
+      "add": "Agregar",
+      "saving": "Guardando...",
+      "update": "Actualizar",
+      "edit": "Editar",
+      "cancel": "Cancelar",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Paquetes de Beneficios",
+      "name": "Nombre del Paquete",
+      "nameRequired": "El nombre del paquete es requerido",
+      "description": "Descripción",
+      "benefitTypes": "Tipos de Beneficios",
+      "coverageLevel": "Nivel de Cobertura",
+      "basic": "Básico",
+      "standard": "Estándar",
+      "premium": "Premium",
+      "employeeCost": "Costo del Empleado ($)",
+      "employerCost": "Costo del Empleador ($)",
+      "noPackages": "No se encontraron paquetes de beneficios",
+      "inUse": "Asignado a {{count}} empleado(s)",
+      "cannotDelete": "No se puede eliminar paquete asignado a empleados",
+      "addError": "Error al agregar paquete de beneficios",
+      "updateError": "Error al actualizar paquete de beneficios",
+      "deleteError": "Error al eliminar paquete de beneficios",
+      "confirmDelete": "¿Está seguro de que desea eliminar este paquete de beneficios?"
+    },
+    "workSchedules": {
+      "title": "Horarios de Trabajo y Turnos",
+      "description": "Definir horarios de trabajo, patrones de turnos y horas flexibles",
+      "addNew": "Agregar Nuevo Horario de Trabajo",
+      "add": "Agregar",
+      "saving": "Guardando...",
+      "update": "Actualizar",
+      "edit": "Editar",
+      "cancel": "Cancelar",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Horarios de Trabajo",
+      "name": "Nombre del Horario",
+      "nameRequired": "El nombre del horario es requerido",
+      "description": "Descripción",
+      "startTime": "Hora de Inicio",
+      "endTime": "Hora de Fin",
+      "daysOfWeek": "Días de la Semana",
+      "breakDuration": "Duración del Descanso (minutos)",
+      "flexibleHours": "Horas Flexibles",
+      "flexible": "Flexible",
+      "fixed": "Fijo",
+      "maxHoursPerWeek": "Horas Máximas por Semana",
+      "noSchedules": "No se encontraron horarios de trabajo",
+      "inUse": "Asignado a {{count}} empleado(s)",
+      "cannotDelete": "No se puede eliminar horario asignado a empleados",
+      "addError": "Error al agregar horario de trabajo",
+      "updateError": "Error al actualizar horario de trabajo",
+      "deleteError": "Error al eliminar horario de trabajo",
+      "confirmDelete": "¿Está seguro de que desea eliminar este horario de trabajo?"
+    },
+    "overtimePolicies": {
+      "title": "Políticas de Horas Extras",
+      "description": "Configurar reglas de cálculo de horas extras, umbrales y multiplicadores",
+      "addNew": "Agregar Nueva Política de Horas Extras",
+      "add": "Agregar",
+      "saving": "Guardando...",
+      "update": "Actualizar",
+      "edit": "Editar",
+      "cancel": "Cancelar",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Políticas de Horas Extras",
+      "name": "Nombre de la Política",
+      "nameRequired": "El nombre de la política es requerido",
+      "description": "Descripción",
+      "weeklyThreshold": "Umbral Semanal (horas)",
+      "dailyThreshold": "Umbral Diario (horas)",
+      "multiplier": "Multiplicador de Horas Extras",
+      "requiresApproval": "Requiere Aprobación",
+      "appliesTo": "Se Aplica A",
+      "all": "Todos los Empleados",
+      "department": "Departamento",
+      "jobTitle": "Título de Trabajo",
+      "noPolicies": "No se encontraron políticas de horas extras",
+      "addError": "Error al agregar política de horas extras",
+      "updateError": "Error al actualizar política de horas extras",
+      "deleteError": "Error al eliminar política de horas extras",
+      "confirmDelete": "¿Está seguro de que desea eliminar esta política de horas extras?"
+    },
+    "attendancePolicies": {
+      "title": "Políticas de Asistencia",
+      "description": "Establecer reglas de asistencia, períodos de gracia y sistemas de puntos",
+      "addNew": "Agregar Nueva Política de Asistencia",
+      "add": "Agregar",
+      "saving": "Guardando...",
+      "update": "Actualizar",
+      "edit": "Editar",
+      "cancel": "Cancelar",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Políticas de Asistencia",
+      "name": "Nombre de la Política",
+      "nameRequired": "El nombre de la política es requerido",
+      "description": "Descripción",
+      "lateGracePeriod": "Período de Gracia por Llegada Tardía (minutos)",
+      "absenceLimitPerMonth": "Límite de Ausencias por Mes",
+      "tardinessPenalty": "Penalización por Tardanza (puntos)",
+      "absencePenalty": "Penalización por Ausencia (puntos)",
+      "pointThresholdTermination": "Umbral de Puntos para Terminación",
+      "appliesTo": "Se Aplica A",
+      "all": "Todos los Empleados",
+      "department": "Departamento",
+      "jobTitle": "Título de Trabajo",
+      "noPolicies": "No se encontraron políticas de asistencia",
+      "addError": "Error al agregar política de asistencia",
+      "updateError": "Error al actualizar política de asistencia",
+      "deleteError": "Error al eliminar política de asistencia",
+      "confirmDelete": "¿Está seguro de que desea eliminar esta política de asistencia?"
+    },
+    "remoteWorkPolicies": {
+      "title": "Políticas de Trabajo Remoto",
+      "description": "Configurar elegibilidad de trabajo remoto, días permitidos y políticas de equipamiento",
+      "addNew": "Agregar Nueva Política de Trabajo Remoto",
+      "add": "Agregar",
+      "saving": "Guardando...",
+      "update": "Actualizar",
+      "edit": "Editar",
+      "cancel": "Cancelar",
+      "delete": "Eliminar",
+      "deleting": "Eliminando...",
+      "list": "Políticas de Trabajo Remoto",
+      "name": "Nombre de la Política",
+      "nameRequired": "El nombre de la política es requerido",
+      "description": "Descripción",
+      "eligibilityCriteria": "Criterios de Elegibilidad",
+      "all": "Todos los Empleados",
+      "department": "Departamento",
+      "jobTitle": "Título de Trabajo",
+      "daysPerWeekAllowed": "Días Permitidos por Semana",
+      "requiresApproval": "Requiere Aprobación",
+      "approvalRequired": "Aprobación Requerida",
+      "noApproval": "No Requiere Aprobación",
+      "equipmentProvided": "Equipamiento Proporcionado",
+      "equipmentPolicy": "Política de Equipamiento",
+      "noPolicies": "No se encontraron políticas de trabajo remoto",
+      "addError": "Error al agregar política de trabajo remoto",
+      "updateError": "Error al actualizar política de trabajo remoto",
+      "deleteError": "Error al eliminar política de trabajo remoto",
+      "confirmDelete": "¿Está seguro de que desea eliminar esta política de trabajo remoto?"
+    },
     "failedToRevokeDevice": "Error al revocar dispositivo",
     "failedToRevokeDevices": "Error al revocar dispositivos",
     "deviceRevokedSuccess": "✅ Dispositivo revocado exitosamente",
