--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -739,6 +739,187 @@
       "noHolidays": "Aucun jour férié trouvé",
       "upcoming": "À venir"
     },
+    "jobTitles": {
+      "title": "Titres de Poste et Positions",
+      "description": "Gérer les titres de poste, les positions et la hiérarchie organisationnelle",
+      "addNew": "Ajouter un Nouveau Titre de Poste",
+      "add": "Ajouter",
+      "saving": "Enregistrement...",
+      "update": "Mettre à jour",
+      "edit": "Modifier",
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "deleting": "Suppression...",
+      "list": "Titres de Poste",
+      "name": "Nom du Titre de Poste",
+      "nameRequired": "Le nom du titre de poste est requis",
+      "description": "Description",
+      "department": "Département",
+      "selectDepartment": "Sélectionner un Département",
+      "levelGrade": "Niveau/Grade",
+      "reportsTo": "Rapporte À",
+      "selectJobTitle": "Sélectionner un Titre de Poste",
+      "minSalary": "Salaire Minimum",
+      "maxSalary": "Salaire Maximum",
+      "noJobTitles": "Aucun titre de poste trouvé",
+      "inUse": "Utilisé par {{count}} employé(s)",
+      "cannotDelete": "Impossible de supprimer un titre de poste avec des employés assignés",
+      "addError": "Échec de l'ajout du titre de poste",
+      "updateError": "Échec de la mise à jour du titre de poste",
+      "deleteError": "Échec de la suppression du titre de poste",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce titre de poste?"
+    },
+    "benefitsPackages": {
+      "title": "Forfaits d'Avantages",
+      "description": "Configurer les forfaits d'avantages pour les employés incluant santé, dentaire, retraite et plus",
+      "addNew": "Ajouter un Nouveau Forfait d'Avantages",
+      "add": "Ajouter",
+      "saving": "Enregistrement...",
+      "update": "Mettre à jour",
+      "edit": "Modifier",
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "deleting": "Suppression...",
+      "list": "Forfaits d'Avantages",
+      "name": "Nom du Forfait",
+      "nameRequired": "Le nom du forfait est requis",
+      "description": "Description",
+      "benefitTypes": "Types d'Avantages",
+      "coverageLevel": "Niveau de Couverture",
+      "basic": "De Base",
+      "standard": "Standard",
+      "premium": "Premium",
+      "employeeCost": "Coût Employé ($)",
+      "employerCost": "Coût Employeur ($)",
+      "noPackages": "Aucun forfait d'avantages trouvé",
+      "inUse": "Assigné à {{count}} employé(s)",
+      "cannotDelete": "Impossible de supprimer un forfait assigné à des employés",
+      "addError": "Échec de l'ajout du forfait d'avantages",
+      "updateError": "Échec de la mise à jour du forfait d'avantages",
+      "deleteError": "Échec de la suppression du forfait d'avantages",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce forfait d'avantages?"
+    },
+    "workSchedules": {
+      "title": "Horaires de Travail et Postes",
+      "description": "Définir les horaires de travail, les modèles de postes et les heures flexibles",
+      "addNew": "Ajouter un Nouvel Horaire de Travail",
+      "add": "Ajouter",
+      "saving": "Enregistrement...",
+      "update": "Mettre à jour",
+      "edit": "Modifier",
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "deleting": "Suppression...",
+      "list": "Horaires de Travail",
+      "name": "Nom de l'Horaire",
+      "nameRequired": "Le nom de l'horaire est requis",
+      "description": "Description",
+      "startTime": "Heure de Début",
+      "endTime": "Heure de Fin",
+      "daysOfWeek": "Jours de la Semaine",
+      "breakDuration": "Durée de la Pause (minutes)",
+      "flexibleHours": "Heures Flexibles",
+      "flexible": "Flexible",
+      "fixed": "Fixe",
+      "maxHoursPerWeek": "Heures Maximum par Semaine",
+      "noSchedules": "Aucun horaire de travail trouvé",
+      "inUse": "Assigné à {{count}} employé(s)",
+      "cannotDelete": "Impossible de supprimer un horaire assigné à des employés",
+      "addError": "Échec de l'ajout de l'horaire de travail",
+      "updateError": "Échec de la mise à jour de l'horaire de travail",
+      "deleteError": "Échec de la suppression de l'horaire de travail",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer cet horaire de travail?"
+    },
+    "overtimePolicies": {
+      "title": "Politiques d'Heures Supplémentaires",
+      "description": "Configurer les règles de calcul des heures supplémentaires, les seuils et les multiplicateurs",
+      "addNew": "Ajouter une Nouvelle Politique d'Heures Supplémentaires",
+      "add": "Ajouter",
+      "saving": "Enregistrement...",
+      "update": "Mettre à jour",
+      "edit": "Modifier",
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "deleting": "Suppression...",
+      "list": "Politiques d'Heures Supplémentaires",
+      "name": "Nom de la Politique",
+      "nameRequired": "Le nom de la politique est requis",
+      "description": "Description",
+      "weeklyThreshold": "Seuil Hebdomadaire (heures)",
+      "dailyThreshold": "Seuil Quotidien (heures)",
+      "multiplier": "Multiplicateur d'Heures Supplémentaires",
+      "requiresApproval": "Nécessite une Approbation",
+      "appliesTo": "S'Applique À",
+      "all": "Tous les Employés",
+      "department": "Département",
+      "jobTitle": "Titre de Poste",
+      "noPolicies": "Aucune politique d'heures supplémentaires trouvée",
+      "addError": "Échec de l'ajout de la politique d'heures supplémentaires",
+      "updateError": "Échec de la mise à jour de la politique d'heures supplémentaires",
+      "deleteError": "Échec de la suppression de la politique d'heures supplémentaires",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer cette politique d'heures supplémentaires?"
+    },
+    "attendancePolicies": {
+      "title": "Politiques de Présence",
+      "description": "Établir les règles de présence, les périodes de grâce et les systèmes de points",
+      "addNew": "Ajouter une Nouvelle Politique de Présence",
+      "add": "Ajouter",
+      "saving": "Enregistrement...",
+      "update": "Mettre à jour",
+      "edit": "Modifier",
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "deleting": "Suppression...",
+      "list": "Politiques de Présence",
+      "name": "Nom de la Politique",
+      "nameRequired": "Le nom de la politique est requis",
+      "description": "Description",
+      "lateGracePeriod": "Période de Grâce pour Retard (minutes)",
+      "absenceLimitPerMonth": "Limite d'Absences par Mois",
+      "tardinessPenalty": "Pénalité de Retard (points)",
+      "absencePenalty": "Pénalité d'Absence (points)",
+      "pointThresholdTermination": "Seuil de Points pour Résiliation",
+      "appliesTo": "S'Applique À",
+      "all": "Tous les Employés",
+      "department": "Département",
+      "jobTitle": "Titre de Poste",
+      "noPolicies": "Aucune politique de présence trouvée",
+      "addError": "Échec de l'ajout de la politique de présence",
+      "updateError": "Échec de la mise à jour de la politique de présence",
+      "deleteError": "Échec de la suppression de la politique de présence",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer cette politique de présence?"
+    },
+    "remoteWorkPolicies": {
+      "title": "Politiques de Télétravail",
+      "description": "Configurer l'éligibilité au télétravail, les jours autorisés et les politiques d'équipement",
+      "addNew": "Ajouter une Nouvelle Politique de Télétravail",
+      "add": "Ajouter",
+      "saving": "Enregistrement...",
+      "update": "Mettre à jour",
+      "edit": "Modifier",
+      "cancel": "Annuler",
+      "delete": "Supprimer",
+      "deleting": "Suppression...",
+      "list": "Politiques de Télétravail",
+      "name": "Nom de la Politique",
+      "nameRequired": "Le nom de la politique est requis",
+      "description": "Description",
+      "eligibilityCriteria": "Critères d'Éligibilité",
+      "all": "Tous les Employés",
+      "department": "Département",
+      "jobTitle": "Titre de Poste",
+      "daysPerWeekAllowed": "Jours Autorisés par Semaine",
+      "requiresApproval": "Nécessite une Approbation",
+      "approvalRequired": "Approbation Requise",
+      "noApproval": "Aucune Approbation Requise",
+      "equipmentProvided": "Équipement Fourni",
+      "equipmentPolicy": "Politique d'Équipement",
+      "noPolicies": "Aucune politique de télétravail trouvée",
+      "addError": "Échec de l'ajout de la politique de télétravail",
+      "updateError": "Échec de la mise à jour de la politique de télétravail",
+      "deleteError": "Échec de la suppression de la politique de télétravail",
+      "confirmDelete": "Êtes-vous sûr de vouloir supprimer cette politique de télétravail?"
+    },
     "failedToRevokeDevice": "Échec de la révocation de l'appareil",
     "failedToRevokeDevices": "Échec de la révocation des appareils",
     "deviceRevokedSuccess": "✅ Appareil révoqué avec succès",
