feat: Add missing translation keys for policy dropdowns
- Add select, selectDepartment, selectJobTitle keys to overtime, attendance, and remote work policies
- Add translations in English, Spanish, and French

--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -853,6 +853,9 @@
       "all": "Todos los Empleados",
       "department": "Departamento",
       "jobTitle": "Título de Trabajo",
+      "select": "Seleccionar",
+      "selectDepartment": "Seleccionar Departamento",
+      "selectJobTitle": "Seleccionar Título de Trabajo",
       "noPolicies": "No se encontraron políticas de horas extras",
       "addError": "Error al agregar política de horas extras",
       "updateError": "Error al actualizar política de horas extras",
@@ -883,6 +886,9 @@
       "all": "Todos los Empleados",
       "department": "Departamento",
       "jobTitle": "Título de Trabajo",
+      "select": "Seleccionar",
+      "selectDepartment": "Seleccionar Departamento",
+      "selectJobTitle": "Seleccionar Título de Trabajo",
       "noPolicies": "No se encontraron políticas de asistencia",
       "addError": "Error al agregar política de asistencia",
       "updateError": "Error al actualizar política de asistencia",
