--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -853,6 +853,9 @@
       "all": "Tous les Employés",
       "department": "Département",
       "jobTitle": "Titre de Poste",
+      "select": "Sélectionner",
+      "selectDepartment": "Sélectionner un Département",
+      "selectJobTitle": "Sélectionner un Titre de Poste",
       "noPolicies": "Aucune politique d'heures supplémentaires trouvée",
       "addError": "Échec de l'ajout de la politique d'heures supplémentaires",
       "updateError": "Échec de la mise à jour de la politique d'heures supplémentaires",
@@ -883,6 +886,9 @@
       "all": "Tous les Employés",
       "department": "Département",
       "jobTitle": "Titre de Poste",
+      "select": "Sélectionner",
+      "selectDepartment": "Sélectionner un Département",
+      "selectJobTitle": "Sélectionner un Titre de Poste",
       "noPolicies": "Aucune politique de présence trouvée",
       "addError": "Échec de l'ajout de la politique de présence",
       "updateError": "Échec de la mise à jour de la politique de présence",
