fix: Add missing select translation keys to Spanish and French

--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -914,6 +914,9 @@
       "all": "Todos los Empleados",
       "department": "Departamento",
       "jobTitle": "Título de Trabajo",
+      "select": "Seleccionar",
+      "selectDepartment": "Seleccionar Departamento",
+      "selectJobTitle": "Seleccionar Título de Trabajo",
       "daysPerWeekAllowed": "Días Permitidos por Semana",
       "requiresApproval": "Requiere Aprobación",
       "approvalRequired": "Aprobación Requerida",
