fix: prevent modal reload on checkbox clicks and add selective holiday assignment
- Add onClick stopPropagation to all checkboxes in settings modals to prevent form submission
- Add applies_to_type and applies_to_id fields to holidays for selective assignment
- Update holidays API endpoints to support assignment filtering
- Update calendar endpoint to filter holidays based on employee assignments
- Add assignment dropdowns in holidays modal (All, Department, Job Title, Employee)
- Add translation keys for holiday assignment in en, es, fr locales
- Run database migration to add holiday assignment columns

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -813,7 +813,16 @@
       "deleteError": "Failed to delete holiday",
       "confirmDelete": "Are you sure you want to delete this holiday?",
       "noHolidays": "No holidays found",
-      "upcoming": "Upcoming"
+      "upcoming": "Upcoming",
+      "appliesTo": "Applies To",
+      "appliesToAll": "All Employees",
+      "appliesToDepartment": "Department",
+      "appliesToJobTitle": "Job Title",
+      "appliesToEmployee": "Employee",
+      "selectDepartment": "Select Department",
+      "selectJobTitle": "Select Job Title",
+      "selectEmployee": "Select Employee",
+      "select": "Select"
     },
     "jobTitles": {
       "title": "Job Titles & Positions",
@@ -1302,6 +1311,20 @@
     "leaveEmptyIfPermanent": "Leave empty if permanent",
     "requiredForPayrollTax": "Required for payroll and tax purposes",
     "directDepositInformation": "Direct Deposit Information",
+    "settings": "Settings (Optional)",
+    "settingsOptional": "These settings can be assigned later if not set during onboarding",
+    "jobTitle": "Job Title",
+    "selectJobTitle": "Select Job Title",
+    "benefitsPackage": "Benefits Package",
+    "selectBenefitsPackage": "Select Benefits Package",
+    "workSchedule": "Work Schedule",
+    "selectWorkSchedule": "Select Work Schedule",
+    "overtimePolicy": "Overtime Policy",
+    "selectOvertimePolicy": "Select Overtime Policy",
+    "attendancePolicy": "Attendance Policy",
+    "selectAttendancePolicy": "Select Attendance Policy",
+    "remoteWorkPolicy": "Remote Work Policy",
+    "selectRemoteWorkPolicy": "Select Remote Work Policy",
     "completeOnboardingProcess": "Complete onboarding process",
     "basicInformation": "Basic Information",
     "emergencyContact": "Emergency Contact",
@@ -1439,6 +1462,13 @@
     "contract": "Contract",
     "noneToBeAssigned": "None - To be assigned",
     "location": "Location",
+    "settings": "Settings",
+    "jobTitle": "Job Title",
+    "benefitsPackage": "Benefits Package",
+    "workSchedule": "Work Schedule",
+    "overtimePolicy": "Overtime Policy",
+    "attendancePolicy": "Attendance Policy",
+    "remoteWorkPolicy": "Remote Work Policy",
     "probationEnd": "Probation End",
     "contractNotSent": "Not Sent",
     "contractSent": "Sent",
